--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,4 +1,17 @@
 version: '2'
 services:
+    php:
+      image:php:latest
+
+    # httpd
     apache-server:
       image: httpd:2.4.25
+      container_name: apache-server
+      ports:
+        - "8080:80"
+      links:
+        - php
+
+volumes:
+  apache-data:
+    driver: local
