--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,16 +1,6 @@
 version: '2'
 services:
-  apache-server:
-    image: httpd:2.4.25
-    depends_on: 
-      - php
-    ports:
-      - "8080:80"
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-    links:
-      - php
   php:
-    image: php:latest
+    image: php:7.1.3
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
