--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '2'
 services:
-  php:
-    image: php:7.1.3
+  apache-server:
+    image: httpd:2.4.25
+    ports:
+      - "8080:80"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
