--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
-  apache:
-    image: httpd:2.4.25
-    container_name: apache
+  apache-server:
+    image: httpd:latest
+    container_name: apache-server
     ports:
       - "8080:80"
     volumes:
