--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  php:
-    image: php:latest
+  apache-server:
+    image: httpd:latest
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
