--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -2,5 +2,12 @@ version: '2'
 services:
   httpd:
     image: httpd:2.4.25
+    ports:
+      - "8080:80"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+  whoami:
+    image: jwilder/whoami
+    container_name: whoami
+    environment:
+      - VIRTUAL_HOST=whoami.local
