--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     image: php:apache
     volumes:
       - content:/var/www/html/
+  apache-lb:
+    image: rancher/lb-service-haproxy:latest
+    ports:
+      - 80
 
 volumes: 
   content:
