--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -11,3 +11,11 @@ services:
     lb_config:
       port_rules:
         - source_port: 80
+          target_port: 8080
+          service: apache
+    health_check:
+      port: 42
+      interval: 2000
+      unhealthy_threshold: 3
+      healthy_threshold: 2
+      response_timeout: 2000
