--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: php:apache
     volumes:
       - content:/var/www/html/
+    ports:
+      - "8080:80"
 
 volumes: 
   content:
