--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     image: php:apache
     volumes:
       - content:/var/www/html/
+  apache-lb:
+    image: rancher/lb-service-haproxy:latest
     ports:
-      - "8080:80"
+      - 80
 
 volumes: 
   content:
