--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -4,11 +4,16 @@ catalog:
   version: 2017-03-29-rancher1
   questions:
     - variable: "APACHE_SCALE"
-      description: "Number of minio nodes."
+      description: "Number of Apache nodes."
       label: "Apache nodes"
       type: int
       required: true
       default: 1
+    - variable: "VOLUME_DRIVER"
+      description: "Docker volume driver"
+      label: "Volume Driver"
+      type: "string"
+      default: "local"
 
 services:
   apache:
