--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   apache-lb:
     image: rancher/lb-service-haproxy:latest
     ports:
-      - 80
+      - ${PUBLISH_PORT}:80
 
 volumes: 
   content:
