--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '2'
 services:
   apache:
-    image: php:apache
+    image: 7.1.3-apache
     volumes:
       - content:/var/www/html/
   apache-lb:
-    image: rancher/lb-service-haproxy:latest
+    image: rancher/lb-service-haproxy:v0.6.4
     ports:
       - ${PUBLISH_PORT}:80
 
