--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 catalog:
   name: Apache
-  version: 2017-03-29-rancher1
+  version: v4.3.17-rancher1
   questions:
     - variable: "APACHE_SCALE"
       description: "Number of Apache nodes"
