--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   apache:
-    image: 7.1.3-apache
+    image: php:7.1.3-apache
     volumes:
       - content:/var/www/html/
   apache-lb:
