--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -35,7 +35,7 @@ catalog:
     - variable: "CERT_NAME"
       description: "Specifiy certificates"
       label: "Certificate"
-      type: string
+      type: "string"
       required: true
       default: []
 
