--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -37,7 +37,7 @@ catalog:
       label: "Certificate"
       type: "string"
       required: true
-      default: "[]"
+      default: ""
 
 services:
   apache:
