--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -33,7 +33,7 @@ catalog:
       description: "Specify your load balancer communication protocol"
       label: "Cert"
       type: "string"
-      required: true
+      required: false
       default: null
 
 
