--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -8,8 +8,9 @@ services:
     image: rancher/lb-service-haproxy:v0.6.4
     ports:
       - ${PUBLISH_PORT}:80
-    certs:
-      - ${CERT_NAME}
+    lb_config:
+      certs:
+        - ${CERT_NAME}
 
 volumes: 
   content:
