--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -2,15 +2,28 @@ version: '2'
 services:
   apache:
     image: php:7.1.3-apache
+    scale: ${APACHE_SCALE}
     volumes:
       - content:/var/www/html/
   apache-lb:
     image: rancher/lb-service-haproxy:v0.6.4
     ports:
       - ${PUBLISH_PORT}:80
+    scale: 1
     lb_config:
       certs:
         - ${CERT_NAME}
+      port_rules:
+        - source_port: 80
+          target_port: 80
+          service: apache
+          protocol: ${PROTOCOL}
+    health_check:
+      port: 42
+      interval: 2000
+      unhealthy_threshold: 3
+      healthy_threshold: 2
+      response_timeout: 2000
 
 volumes: 
   content:
