--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -26,9 +26,7 @@ catalog:
       type: enum
       required: true
       options:
-        - https
-        - tls
-        - sni
+        - http
     - variable: "CERT_NAME"
       description: "Specify encryption cert for load balancer encryption protocol"
       label: "Cerificate Name"
