--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -7,14 +7,13 @@ services:
   apache-lb:
     image: rancher/lb-service-haproxy:v0.6.4
     ports:
-      - {{ .Values.PUBLISH_PORT }}:80
-    scale: 1
+      - ${PUBLISH_PORT}:80
     lb_config:
       port_rules:
         - source_port: 80
           target_port: 80
           service: apache
-          protocol: {{ .Values.PROTOCOL }}
+          protocol: ${PROTOCOL}
     health_check:
       port: 42
       interval: 2000
@@ -25,5 +24,5 @@ services:
 
 volumes: 
   content:
-    driver: {{ .Values.VOLUME_DRIVER }}
+    driver: ${VOLUME_DRIVER}
 
