--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -33,3 +33,17 @@ catalog:
 services:
   apache:
     scale: ${APACHE_SCALE}
+  apache-lb:
+    scale: 1
+    lb_config:
+      port_rules:
+        - source_port: 80
+          target_port: 81
+          service: apache
+          protocol: ${PROTOCOL}
+    health_check:
+      port: 42
+      interval: 2000
+      unhealthy_threshold: 3
+      healthy_threshold: 2
+      response_timeout: 2000
