--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,7 +1,9 @@
 version: '2'
 catalog:
-  name: Apache (Unencrypted)
+  name: Apache
   version: v4.3.17-rancher1
+  description: "Serves PHP web apps populated in volume"
+  minimum_rancher_version: v1.5.0
   questions:
     - variable: "APACHE_SCALE"
       description: "Number of Apache nodes"
