--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   apache:
     image: php:7.1.3-apache
     volumes:
-      - .:/var/www/html/
+      - :/var/www/html/
   apache-lb:
     image: rancher/lb-service-haproxy:v0.6.4
     ports:
