--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -8,3 +8,16 @@ services:
     image: rancher/lb-service-haproxy:v0.6.4
     ports:
       - ${PUBLISH_PORT}:80
+    scale: 1
+    lb_config:
+      port_rules:
+        - source_port: 80
+          target_port: 80
+          service: apache
+          protocol: ${PROTOCOL}
+    health_check:
+      port: 42
+      interval: 2000
+      unhealthy_threshold: 3
+      healthy_threshold: 2
+      response_timeout: 2000
