--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: php:7.1.3-apache
     volumes:
       - :/var/www/html/
+    scale: ${APACHE_SCALE}
   apache-lb:
     image: rancher/lb-service-haproxy:v0.6.4
     ports:
