--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -11,11 +11,21 @@ services:
       - {{.Values.PUBLISH_PORT}}:80
     scale: 1
     lb_config:
+      {{if .Values.PROTOCOL not "custom"}}
       port_rules:
         - source_port: 80
           target_port: 80
           service: apache
           protocol: {{.Values.PROTOCOL}}
+      {{if (.Values.PROTOCOL eq "http" or .Values.PROTOCOL eq "tcp")}}
+      certs:
+        - {{.Values.CERT_NAME}}
+      {{end}}
+      {{else}}
+      config: |-
+        {{.Values.CUSTOM}}
+      {{end}}
+
     health_check:
       port: 42
       interval: 2000
