--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -3,32 +3,12 @@ services:
   apache:
     image: php:7.1.3-apache
     volumes:
-      - :/var/www/html/
-    scale: {{.Values.APACHE_SCALE}}
+      - content:/var/www/html/
   apache-lb:
     image: rancher/lb-service-haproxy:v0.6.4
     ports:
-      - {{.Values.PUBLISH_PORT}}:80
-    scale: 1
-    lb_config:
-      {{if .Values.PROTOCOL not "custom"}}
-      port_rules:
-        - source_port: 80
-          target_port: 80
-          service: apache
-          protocol: {{.Values.PROTOCOL}}
-      {{if (.Values.PROTOCOL eq "http" or .Values.PROTOCOL eq "tcp")}}
-      certs:
-        - {{.Values.CERT_NAME}}
-      {{end}}
-      {{else}}
-      config: |-
-        {{.Values.CUSTOM}}
-      {{end}}
+      - ${PUBLISH_PORT}:80
 
-    health_check:
-      port: 42
-      interval: 2000
-      unhealthy_threshold: 3
-      healthy_threshold: 2
-      response_timeout: 2000
+volumes: 
+  content:
+    driver: ${VOLUME_DRIVER}
