--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,9 +1,7 @@
 version: '2'
 catalog:
-  name: Apache
+  name: Apache (Unencrypted)
   version: v4.3.17-rancher1
-  description: "Serves PHP web apps populated in volume"
-  minimum_rancher_version: v1.5.0
   questions:
     - variable: "APACHE_SCALE"
       description: "Number of Apache nodes"
@@ -31,17 +29,21 @@ catalog:
       options:
         - http
         - tcp
-        - https
-        - tls
-        - sni
-        - custom
-    - variable: "CERT_NAME"
-      description: "Specify certificate name created in Rancher UI"
-      label: "Certificate Name"
-      type: certificate
-      required: false
-    - variable: "CUSTOM"
-      description: "Enter your custom config here"
-      label: "Custom config"
-      type: multiline
-      required: false
+
+services:
+  apache:
+    scale: ${APACHE_SCALE}
+  apache-lb:
+    scale: 1
+    lb_config:
+      port_rules:
+        - source_port: 80
+          target_port: 81
+          service: apache
+          protocol: ${PROTOCOL}
+    health_check:
+      port: 42
+      interval: 2000
+      unhealthy_threshold: 3
+      healthy_threshold: 2
+      response_timeout: 2000
