--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,7 +1,9 @@
 version: '2'
 catalog:
-  name: Apache (Unencrypted)
+  name: Apache
   version: v4.3.17-rancher1
+  description: "Serves PHP web apps populated in volume"
+  minimum_rancher_version: v1.5.0
   questions:
     - variable: "APACHE_SCALE"
       description: "Number of Apache nodes"
@@ -29,21 +31,17 @@ catalog:
       options:
         - http
         - tcp
-
-services:
-  apache:
-    scale: 1
-  apache-lb:
-    scale: 1
-    lb_config:
-      port_rules:
-        - source_port: 80
-          target_port: 80
-          service: apache
-          protocol: http
-    health_check:
-      port: 42
-      interval: 2000
-      unhealthy_threshold: 3
-      healthy_threshold: 2
-      response_timeout: 2000
+        - https
+        - tls
+        - sni
+        - custom
+    - variable: "CERT_NAME"
+      description: "Specify certificate name created in Rancher UI"
+      label: "Certificate Name"
+      type: certificate
+      required: false
+    - variable: "CUSTOM"
+      description: "Enter your custom config here"
+      label: "Custom config"
+      type: multiline
+      required: false
