--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - {{.Values.PUBLISH_PORT}}:80
     scale: 1
     lb_config:
-    {{- if .Values.PROTOCOL not "custom"}}
+    {{- if not (.Values.PROTOCOL eq "custom")}}
       port_rules:
         - source_port: 80
           target_port: 80
