--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -10,12 +10,14 @@ services:
     ports:
       - {{.Values.PUBLISH_PORT}}:80
     scale: 1
+    {{if not (contains .Values.PROTOCOL "custom")}}
     lb_config:
       port_rules:
         - source_port: 80
           target_port: 80
           service: apache
           protocol: {{.Values.PROTOCOL}}
+    {{end}}
     health_check:
       port: 42
       interval: 2000
