--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     lb_config:
       {{if (contains .Values.PROTOCOL "https") or (contains .Values.PROTOCOL "tls") or (contains .Values.PROTOCOL "sni")}}
       certs:
-        - {{.Values.CERT_NAME}}
+        - blah
       {{end}}
       port_rules:
         - source_port: 80
