--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -10,13 +10,15 @@ services:
     ports:
       - {{.Values.PUBLISH_PORT}}:80
     scale: 1
-    {{if ((contains .Values.PROTOCOL "http") or (contains .Values.PROTOCOL "tls"))}}
+    {{if not (contains .Values.PROTOCOL "custom")}}
     lb_config:
+      {{if (contains .Values.PROTOCOL "http")}}
       port_rules:
         - source_port: 80
           target_port: 80
           service: apache
           protocol: {{.Values.PROTOCOL}}
+      {{end}}
     {{end}}
     health_check:
       port: 42
