--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     scale: 1
     {{if not (contains .Values.PROTOCOL "custom")}}
     lb_config:
-      {{if (contains .Values.PROTOCOL "http")}}
+      {{if ((contains .Values.PROTOCOL "http") or (contains .Values.PROTOCOL "tcp"))}}
       port_rules:
         - source_port: 80
           target_port: 80
