--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -12,6 +12,10 @@ services:
     scale: 1
     {{if not (contains .Values.PROTOCOL "custom")}}
     lb_config:
+      {{if ((contains .Values.PROTOCOL "https") or (contains .Values.PROTOCOL "tls") or (contains .Values.PROTOCOL "sni"))}}
+      certs:
+        - {{.Values.CERT_NAME}}
+      {{end}}
       {{if ((contains .Values.PROTOCOL "http") or (contains .Values.PROTOCOL "tcp"))}}
       port_rules:
         - source_port: 80
