--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -23,6 +23,9 @@ services:
           service: apache
           protocol: {{.Values.PROTOCOL}}
       {{end}}
+    {{else}}
+      config: |-
+      {{.Values.CUSTOM}}
     {{end}}
     health_check:
       port: 42
