--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - {{.Values.PUBLISH_PORT}}:80
     scale: 1
     lb_config:
-      config: {{.Values.CUSTOM}}
+      config: 
+        - {{.Values.CUSTOM}}
     health_check:
       port: 42
       interval: 2000
