--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     scale: 1
     lb_config:
       config: |-
-        ${CUSTOM}
+        {{.Values.CUSTOM}}
     health_check:
       port: 42
       interval: 2000
