--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -10,9 +10,24 @@ services:
     ports:
       - {{.Values.PUBLISH_PORT}}:80
     scale: 1
+    {{if not (contains .Values.PROTOCOL "custom")}}
     lb_config:
+      {{if ((contains .Values.PROTOCOL "https") or (contains .Values.PROTOCOL "tls") or (contains .Values.PROTOCOL "sni"))}}
+      certs:
+        - {{.Values.CERT_NAME}}
+      {{end}}
+      {{if ((contains .Values.PROTOCOL "http") or (contains .Values.PROTOCOL "tcp"))}}
+      port_rules:
+        - source_port: 80
+          target_port: 80
+          service: apache
+          protocol: {{.Values.PROTOCOL}}
+      {{end}}
+      {{if (contains .Values.PROTOCOL "custom")}}
       config: |-
         ${CUSTOM}
+      {{end}}
+    {{end}}
     health_check:
       port: 42
       interval: 2000
