--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     scale: 1
     {{if not (contains .Values.PROTOCOL "custom")}}
     lb_config:
-      {{if ((contains .Values.PROTOCOL "https") or (contains .Values.PROTOCOL "tls") or (contains .Values.PROTOCOL "sni"))}}
+      {{if ((eq .Values.PROTOCOL "https") or (eq .Values.PROTOCOL "tls") or (eq .Values.PROTOCOL "sni"))}}
       certs:
         - {{.Values.CERT_NAME}}
       {{end}}
