--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -10,23 +10,22 @@ services:
     ports:
       - {{.Values.PUBLISH_PORT}}:80
     scale: 1
-    {{if not (contains .Values.PROTOCOL "custom")}}
     lb_config:
+    {{if not (eq .Values.PROTOCOL "custom")}}
       {{if ((eq .Values.PROTOCOL "https") or (eq .Values.PROTOCOL "tls") or (eq .Values.PROTOCOL "sni"))}}
       certs:
         - {{.Values.CERT_NAME}}
       {{end}}
-      {{if ((contains .Values.PROTOCOL "http") or (contains .Values.PROTOCOL "tcp"))}}
+      {{if ((eq .Values.PROTOCOL "http") or (eq .Values.PROTOCOL "tcp"))}}
       port_rules:
         - source_port: 80
           target_port: 80
           service: apache
           protocol: {{.Values.PROTOCOL}}
       {{end}}
-      {{if (contains .Values.PROTOCOL "custom")}}
+    {{else}}
       config: |-
         ${CUSTOM}
-      {{end}}
     {{end}}
     health_check:
       port: 42
