--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     {{if not (eq .Values.PROTOCOL "custom")}}
       {{if ((eq .Values.PROTOCOL "https") or (eq .Values.PROTOCOL "tls") or (eq .Values.PROTOCOL "sni"))}}
       certs:
-        - {{.Values.CERT_NAME}}
+        - test
       {{end}}
       {{if ((eq .Values.PROTOCOL "http") or (eq .Values.PROTOCOL "tcp"))}}
       port_rules:
