--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -12,8 +12,10 @@ services:
     scale: 1
     lb_config:
     {{if not (eq .Values.PROTOCOL "custom")}}
+      {{if ((eq .Values.PROTOCOL "https") or (eq .Values.PROTOCOL "tls") or (eq .Values.PROTOCOL "sni"))}}
       certs:
-        - "test"
+        - {{.Values.CERT_NAME}}
+      {{end}}
       {{if ((eq .Values.PROTOCOL "http") or (eq .Values.PROTOCOL "tcp"))}}
       port_rules:
         - source_port: 80
