--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -45,3 +45,9 @@ catalog:
       label: "Custom config"
       type: multiline
       required: false
+
+services:
+  apache-lb:
+    lb-config:
+      certs:
+        - blah
