--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -11,28 +11,19 @@ services:
       - {{.Values.PUBLISH_PORT}}:80
     scale: 1
     lb_config:
-    {{if not (eq .Values.PROTOCOL "custom")}}
-      {{if ((eq .Values.PROTOCOL "https") or (eq .Values.PROTOCOL "tls") or (eq .Values.PROTOCOL "sni"))}}
-      certs:
-        - {{.Values.CERT_NAME}}
-      {{end}}
-      {{if ((eq .Values.PROTOCOL "http") or (eq .Values.PROTOCOL "tcp"))}}
       port_rules:
         - source_port: 80
           target_port: 80
           service: apache
           protocol: {{.Values.PROTOCOL}}
-      {{end}}
-    {{else}}
-      config: |-
-        ${CUSTOM}
-    {{end}}
     health_check:
       port: 42
       interval: 2000
       unhealthy_threshold: 3
       healthy_threshold: 2
       response_timeout: 2000
+  apache-data:
+    image: ubuntu:16.04
 
 volumes: 
   content:
