--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,8 +1,32 @@
 version: '2'
 services:
-  apache-data:
-    image: ubuntu:16.04
+  apache:
+    image: php:7.1.3-apache
+    volumes:
+      - content:/var/www/html
+    scale: {{.Values.APACHE_SCALE}}
+  apache-lb:
+    image: rancher/lb-service-haproxy:v0.6.4
+    ports:
+      - {{.Values.PUBLISH_PORT}}:80
     scale: 1
+    lb_config:
+      port_rules:
+        - source_port: 80
+          target_port: 80
+          service: apache
+          protocol: {{.Values.PROTOCOL}}
+    health_check:
+      port: 42
+      interval: 2000
+      unhealthy_threshold: 3
+      healthy_threshold: 2
+      response_timeout: 2000
+  apache-data:
+    command:
+      - cat
+    image: ubuntu:14.04.2
+    stdin_open: true
 
 volumes:
   content:
