--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -23,7 +23,8 @@ services:
       healthy_threshold: 2
       response_timeout: 2000
   apache-data:
-    image: ubuntu:14.04.2
+    tty: true
+    image: ubuntu:16.04
     volumes:
       - content:/root/data
 
