--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   apache:
     image: php:7.1.3-apache
+    command: touch /etc/apache2/sites-available/apache.conf
     volumes:
       - content:/var/www/html
     scale: {{.Values.APACHE_SCALE}}
