--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   apache:
     image: php:7.1.3-apache
-    command: bash -c "touch /etc/apache2/sites-available/apache.conf"
+    command: sudo bash -c "touch /etc/apache2/sites-available/apache.conf"
     volumes:
       - content:/var/www/html
     scale: {{.Values.APACHE_SCALE}}
