--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '2'
 services:
   apache:
+    tty: true
     image: php:7.1.3-apache
-    command: sudo bash -c "touch /etc/apache2/sites-available/apache.conf"
+    command: bash -c "touch /etc/apache2/sites-available/apache.conf"
     volumes:
       - content:/var/www/html
     scale: {{.Values.APACHE_SCALE}}
