--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '2'
 services:
   apache:
+    tty: true
+    stdin_open: true
     image: php:7.1.3-apache
+    command: touch /etc/apache2/sites-available/apache.conf
     volumes:
       - content:/var/www/html
     scale: {{.Values.APACHE_SCALE}}
