--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     tty: true
     stdin_open: true
     image: php:7.1.3-apache
-    command: sudo touch /etc/apache2/sites-available/apache.conf
+    command: bash -c "touch /etc/apache2/sites-available/apache.conf, httpd-foreground"
     volumes:
       - content:/var/www/html
     scale: {{.Values.APACHE_SCALE}}
