--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -4,10 +4,17 @@ services:
     tty: true
     stdin_open: true
     image: php:7.1.3-apache
-    command: bash -c "touch /etc/apache2/sites-available/apache.conf && apache2-foreground"
     volumes:
       - content:/var/www/html
     scale: {{.Values.APACHE_SCALE}}
+    labels:
+      io.rancher.sidekicks: apache-config
+  apache-config:
+    tty: true
+    command:
+      - cat
+    image: php:7.1.3-apache
+    stdin_open: true
   apache-lb:
     image: rancher/lb-service-haproxy:v0.6.4
     ports:
