--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -12,6 +12,8 @@ services:
   apache-config:
     tty: true
     image: php:7.1.3-apache
+    volumes:
+      - content:/var/www/html
     stdin_open: true
   apache-lb:
     image: rancher/lb-service-haproxy:v0.6.4
