--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -6,15 +6,15 @@ services:
     image: php:7.1.3-apache
     volumes:
       - content:/var/www/html
-      - apache_config:/etc/apache2/sites-available/
+      - config:/etc/apache2/sites-available/
     scale: {{.Values.APACHE_SCALE}}
     labels:
       io.rancher.sidekicks: apache-config
   apache-config:
     tty: true
-    image: amycodes/apache-config
+    image: amycodes/apache-config:latest
     volumes:
-      - apache_config:/root
+      - config:/root
     stdin_open: true
   apache-lb:
     image: rancher/lb-service-haproxy:v0.6.4
@@ -33,8 +33,9 @@ services:
       unhealthy_threshold: 3
       healthy_threshold: 2
       response_timeout: 2000
+
 volumes:
   content:
     driver: {{.Values.VOLUME_DRIVER}}
-  apache_config:
+  config:
     driver: {{.Values.VOLUME_DRIVER}}
