--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     scale: {{.Values.APACHE_SCALE}}
     labels:
       io.rancher.sidekicks: apache-config
+   apache-config:
+    tty: true
+    image: amycodes/apache-config:latest
 
 volumes:
   content:
