--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -4,7 +4,49 @@ catalog:
   version: v4.3.17-rancher1
   description: "Serves PHP web apps populated in volume"
   minimum_rancher_version: v1.5.0
-
-services:
-  apache:
-    scale: 1
+  questions:
+    - variable: "APACHE_SCALE"
+      description: "Number of Apache nodes"
+      label: "Apache nodes"
+      type: int
+      required: true
+      default: 1
+    - variable: "VOLUME_DRIVER"
+      description: "Docker volume driver"
+      label: "Volume Driver"
+      type: "string"
+      default: "local"
+    - variable: "PUBLISH_PORT"
+      description: "Customize your external publish port, defaults to port 80"
+      label: "Publish Port"
+      type: int
+      required: false
+      default: 80
+    - variable: "PROTOCOL"
+      description: "Specify your load balancer communication protocol"
+      label: "Protocol"
+      type: enum
+      required: true
+      default: http
+      options:
+        - http
+        - tcp
+        - https
+        - tls
+        - sni
+        - custom
+    - variable: "CERT_NAME"
+      description: "Specify certificate name created in Rancher UI"
+      label: "Certificate Name"
+      type: certificate
+      required: false
+    - variable: "CUSTOM"
+      description: "Enter your custom config here"
+      label: "Custom config"
+      type: multiline
+      required: false
+    - variable: "APACHE_CONF"
+      description: "Enter your apache configuration file here"
+      label: "Apache Configuration"
+      type: multiline
+      required: false
