--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -50,3 +50,9 @@ catalog:
       label: "Apache Configuration"
       type: multiline
       required: false
+    - variable: "APACHE_CONFIG_TEST"
+      description: "blah"
+      label: "blah"
+      type: "string"
+      required: true
+      default: "blah"
