--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -53,5 +53,5 @@ catalog:
     - variable: "APACHE_CONFIG_TEST"
       description: "blah"
       label: "blah"
-      type: "string"
+      type: multiline
       required: true
