--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -51,3 +51,13 @@ catalog:
       label: "Apache Configuration"
       type: multiline
       required: false
+    - variable: "APACHE_CERT"
+      description: "Certificate for SSL termination in Apache server"
+      label: "Apache SSL Certificate"
+      type: multiline
+      required: false
+    - variable: "APACHE_KEY"
+      description: "Key for SSL termination in Apache server"
+      label: "Apache SSL Key"
+      type: multiline
+      required: false
